# bossphorus-python

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  Demo 1.ipynb  Dockerfile  MANIFEST  Pipfile  README.md  _config.yml  about.md  alias  bosslet.ipynb  bossphorus.code-workspace  features.md  help.html  index.html  index.md  local_debug_run.py  pyproject.toml  requirements.txt  run.py  setup.py  sitemap.xml  start.md  users.html
.circleci/: config.yml
bosslet/: StorageManager.py  __init__.py  config.py  utils.py
bossphorus/: StorageManager.py  __init__.py  __main__.py  engine.py  pyproject.toml  requirements.txt  storage.py  utils.py  version.py
bossphorus/bossphorus/: __init__.py  coordinate_frame.py  storage.py
bossphorus/common/: __init__.py
bossphorus/engine/: __init__.py  abstract_storage_layer.py  boss_storage_engine.py  filesystem_storage_engine.py  in_memory_numpy_storage_engine.py
bossphorus/marmara/: __init__.py  engine.py  marmara.py
bossphorus/storagemanager/: StorageManager.py  _ChunkedFilesystemStorageManager.py  _CloudVolumeStorageManager.py  _FilesystemStorageManager.py  _MockStorageManager.py  _RelayStorageManager.py  _SimpleCacheStorageManager.py  __init__.py  utils.py
bossphorus/templates/: home.html
bossphorus/tests/: test_sanity.py
css/: main.css
docker/: Dockerfile  alias
docs/: README.md  StorageManagers.md  home.html
en/: help.html  index.html  users.html
marmara/: pyproject.toml  requirements.txt
marmara/marmara/: __init__.py  engine.py  marmara.py  version.py
marmara/tests/: test_engine.py
notebooks/: Bossphorus Benchmarks.ipynb  Demo 1.ipynb  Using Bossphorus with Intern.ipynb  Using Bossphorus with Requests and Blosc.ipynb  grooty-demo.ipynb
tests/: test_engine.py  test_sanity.py
website/: siteConfig.js
website/core/: Footer.js
(+2 files in other folders)
