[tool.poetry]
name = "bossphorus"
version = "0.3.0"
description = "Baby bossDB"
authors = ["Jordan Matelsky <jordan.matelsky.jhuapl.edu", "Miller Wilt <miller.wilt@jhuapl.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
numpy = "^1.15"
intern = "^0.9.8"
blosc = "=1.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
mypy = "^0.630.0"
jupyter = "^1.0"
matplotlib = "^3.0"
pandas = "^0.23.4"
autopep8 = "^1.4"
pydocstyle = "^2.1"
